--- a/casadocodigo/src/main/webapp/templates/_admin_template.xhtml
+++ b/casadocodigo/src/main/webapp/templates/_admin_template.xhtml
@@ -19,8 +19,9 @@
 			<div id="navbar" class="collapse navbar-collapse">
 
 				<ul class="nav navbar-nav">
-					<li class="#{lista}"><h:link value="Lista" outcome="lista" /></li>
-					<li class="#{cadastro}"><h:link value="Cadastro" outcome="form" /></li>
+					<li class="#{lista}"><h:link value="Lista" outcome="/admin/livros/lista" /></li>
+					<li class="#{cadastro}"><h:link value="Cadastro" outcome="/admin/livros/form" /></li>
+					<li class="#{promos}"><h:link value="Promoções Relâmpago" outcome="/admin/promos" /></li>
 				</ul>
 
 				<ul class="nav navbar-nav navbar-right">
@@ -30,7 +31,7 @@
 					<li role="separator" class="divider"></li>
 					<li><h:commandLink action="#{currentUser.logout}" value="Logout" /></li>
 				</ul>
-				
+
 			</div>
 		</div>
 		</nav>
